@@ -1,0 +1,23 @@
+\name{simplot}
+\alias{simplot}
+\title{simplot}
+\usage{
+  simplot(sim, xlab = "", ylab = "")
+}
+\arguments{
+  \item{sim}{similarity matrix}
+
+  \item{xlab}{xlab}
+
+  \item{ylab}{ylab}
+}
+\value{
+  ggplot object
+}
+\description{
+  plotting similarity matrix
+}
+\author{
+  Yu Guangchuang
+}
+
