@@ -1,6 +1,10 @@
 CHANGES IN VERSION 1.3.1
 ------------------------
  o update color scheme of cnetplot <2012-04-10, Tue>
+ o add simplot for plotting semantic similarity matrix <2012-04-20, Fri>
+ o bug fixed of combineScore function for DO semantic similarity matrix
+   which containing NA rows of NA coloumns <2012-04-20, Fri>
+ o export doSim and geneSim functions <2012-04-20, Fri>
 
 CHANGES IN VERSION 1.1.12
 ------------------------
